--- a/index.html
+++ b/index.html
@@ -9,10 +9,30 @@
 <body>
     <header>
         <nav>
-
+            <div class="icon">
+                <img src="../discordlandingpage/image/Capture.JPG" width="150">
+            </div>
+            <div class="ul">
+                <ul>
+                    <a href="#"><li>Download</li></a>
+                    <a href="#"><li>Nitro</li></a>
+                    <a href="#"><li>Discover</li></a>
+                    <a href="#"><li>Safety</li></a>
+                    <a href="#"><li>Support</li></a>
+                    <a href="#"><li>Blog</li></a>
+                    <a href="#"><li>Careers</li></a>
+                </ul>
+            </div>  
+           <div class="button">
+            <a href="#"><button>Open Discord</button></a>
+           </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h1></h1>
+        </section>
+    </main>
     <footer></footer>
 
     
