--- a/index.html
+++ b/index.html
@@ -9,8 +9,47 @@
 <body>
     <header>
         <nav>
-
+            <div class="icon">
+                <!-- <img src="./dis-logo.png" height="50px" width="100px"> -->
+                <img src="./Capture.JPG" width="150">
+            </div>
+            <div class="ul">
+                <ul>
+                    <a href="#"><li>Download</li></a>
+                    <a href="#"><li>Nitro</li></a>
+                    <a href="#"><li>Discover</li></a>
+                    <a href="#"><li>Safety</li></a>
+                    <a href="#"><li>Support</li></a>
+                    <a href="#"><li>Blog</li></a>
+                    <a href="#"><li>Careers</li></a>
+            </ul>
+            </div>  
+           <div class="button">
+            <a href="#"><button>Open Discord</button></a>
+           </div>
         </nav>
+
+
+        <!-- <img src="https://images.alphacoders.com/460/460365.jpg" alt="image" height="600px" width="1900px"  class="discord" style="opacity: 1; display: block;"> -->
+        <div class="para">
+            <h1>IMAGINE A PLACE...</h1>
+            <p>...where you can belong to a school club, a gaming group or a worldwide art community. Where just you and a handful of friends can spend time together. A place that makes it easy to talk every day and hang out more often.</p>
+        </div>
+            <div class="button2">
+                <button class="first">
+                    <!--<img width="24" height="24" src="https://img.icons8.com/material-sharp/24/download--v1.png" alt="download--v1"/>-->
+                    &nbsp;&nbsp;Download for Windows</button>
+                <button class="second">Download Discord to talk, Chat and check out</button>
+            </div>
+        </div> 
+        <div class="backimg">
+            <div class="backimg-left">
+                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4df2dc8d7a9a081ebd_8a8375ab7908384e1fd6efe408284203.svg">
+            </div>
+            <div class="backimg-right">
+                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4db9ca0a124b73d4b7_c40c84ca18d84633a9d86b4046a91437.svg">
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
