--- a/index.html
+++ b/index.html
@@ -7,21 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <h3>Discord</h3>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-        <nav>
-
-        </nav>
-    </header>
+    <header></header>
     <main></main>
     <footer></footer>
 
