--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         <a href="">
 
                             <h2>DISCORD</h2>
+                            <button type="button">Open Discord</button>
                         </a>
                     </div>
                 </div>
