--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </div> 
         <div class="backimg">
             <div class="backimg-left">
-                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4df2dc8d7a9a081ebd_8a8375ab7908384e1fd6efe408284203.svg">
+                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4df2dc8d7a9a081ebd_8a8375ab7908384e1fd6efe408284203.svg" width="300">
             </div>
             <div class="backimg-right">
-                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4db9ca0a124b73d4b7_c40c84ca18d84633a9d86b4046a91437.svg">
+                <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/644fab4db9ca0a124b73d4b7_c40c84ca18d84633a9d86b4046a91437.svg" width="300">
             </div>
         </div>
     </header>
@@ -186,6 +186,6 @@
                     <p>&copy; Anaghal, Hinal, Patrick, Adrianna, WD049, 2024</p>
                     
                 </div>
-    </footer>                                                  
+            </footer>                                                  
 </body>
 </html>
